@@ -28,6 +28,7 @@ OPENSEADRAGON CHANGELOG
     * The `fullpage` property of the 'full-page' event is now `fullPage`.
     * There is now a 'full-screen' event with a `fullScreen` property (true if it has gone to full screen).
     * There are now 'pre-full-page' and 'pre-full-screen' events that include a `preventDefaultAction` property you can set in your handler to cancel. They also have `fullPage` and `fullScreen` properties respectively, to indicate if they are going into or out of the mode.
+* BREAKING CHANGE: Removed the 'onPageChange' callback from the viewer options. Viewer.goToPage() now raises the 'page' event only (#285)
 * MouseTracker now passes the original event objects to its handler methods (#23)
 * MouseTracker now supports an optional 'moveHandler' method for tracking mousemove events (#215)
 * Added stopHandler to MouseTracker. (#262)
